# avro-util

./: .gitignore  Cargo.toml  README.md  avro-rs-example.avsc
src/: main.rs
